Upgrade to Geotools 28.0